# MobilityLab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.agents/: README.md  example-agent.md  framework-agent.md
apps/visualization/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/visualization/src/: App.tsx  styles.css  types.ts
docs/: README.md
docs/decisions/: 0001-project-architecture.md  0002-scenario-system-contracts.md  0003-environment-runtime-contracts.md  0004-agent-runtime-and-behavior-contracts.md  0005-agent-decision-parallelism.md  0006-experiment-run-orchestration.md  0007-visualization-artifact-contracts.md  0008-service-backend-contracts.md  0009-public-us-data-abm-testbeds.md  0010-scenario-spatial-layer-contracts.md  0011-environment-spatial-overlay-runtime.md  0012-project-rename-to-mobilitylab.md  0013-configuration-layer.md
docs/example-reports/: README.md  TEMPLATE.md
docs/example-reports/basic-minimal-commute/: EX-BASIC-MINCOMM-001.md  EX-BASIC-MINCOMM-002.md
examples/: README.md  __init__.py
examples/basic/: __init__.py
examples/basic/minimal_commute/: README.md  SPEC.md  __init__.py  config.yaml  run.py  run_from_config.py  scenario.py
src/campussociety/: __init__.py
src/campussociety/adapters/: __init__.py
src/campussociety/agents/: __init__.py  (+8 more)
src/mobilitylab/: __init__.py
tests/: test_agents_architecture.py  test_agents_system.py  test_config_system.py  test_core_architecture.py  test_core_clock_scheduler.py  test_core_entities_events.py  test_core_simulation.py  test_environment_architecture.py  test_environment_system.py  test_examples_minimal_commute.py  test_experiments_architecture.py  test_experiments_system.py  test_package_import.py  test_scenario_architecture.py  test_scenario_system.py  test_services_architecture.py  test_services_system.py  test_visualization_architecture.py  test_visualization_system.py
(+187 files in other folders)
